--- a/src/RegisterTemplate.ejs
+++ b/src/RegisterTemplate.ejs
@@ -8,9 +8,11 @@
  * Licensed under the terms of the Apache Public License
  * Please see the LICENSE included with this distribution for details.
  */
-import { register } from '../binding';
+import { redirect } from '../binding';
 
-register('Titanium', _ => require('./Titanium').default);
+<% const extensionDir = './ti.internal/extensions/titanium-es/' -%>
+redirect('Titanium', _ => require('<%- extensionDir -%>Titanium').default);
 <% for (const name of [...register].sort()) { -%>
-register('<%- name.split('.').join('/') -%>', _ => require('./<%- name.split('.').join('/') -%>').default);
+<% const path = '<%- name.split('.').join('/') -%>' -%>
+redirect(<%- path -%>, _ => require('./<%- extensionDir + path -%>').default);
 <% } -%>
